--- a/Historial de compras o ventas/Historial.css
+++ b/Historial de compras o ventas/Historial.css
@@ -48,6 +48,7 @@ main{
 }
 
 h1{
+    text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -84,68 +85,80 @@ h1{
 }
 
 .publicacion{
-margin-right: 10px;
-margin-top: 10px;
-margin-left: 10px;
-margin-bottom: 30px;
-width: 550px;
-height: 265px;
-position: relative;
-border-radius: 5px;
-}
-
-.imgprin{
-margin-top: 5px;
-margin-left: 5px;
-margin-right: 5px;
-border-radius: 5px;
-width: 100%;
-height: 100%;
-width: 340px;
-height: 200px;
-object-fit: cover;
-position: absolute;
-top: 0;
-left: 0;
-display: flex;
-align-items: center;
-justify-content: center;
-}
-
-.secundaries{
-position: absolute;
-top: 0;
-left: 350px;
-display: flex;
-flex-direction: column;
-}
-
-.imgsec{
-margin-top: 5px;
-margin-right: 5px;
-border-radius: 5px;
-width: 100%;
-height: 100%;
-width: 195px;
-height: 97.5px;
-object-fit: cover;
-}
-
-.descripcion{
-    margin: 5px;
-    width: 540px;
-    height: 50px;
+    margin-top: 10px;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-bottom: 30px;
+    width: 46.5%;
+    height: 265px;
+    position: relative;
+    border-radius: 5px;
+    }
+    
+    .imgprin{
+    margin-top: 1%;
+    margin-left: 1%;
+    margin-right: 1%;
+    border-radius: 5px;
+    width: 60%;
+    height: 75%;
+    object-fit: cover;
     position: absolute;
-    bottom: 0;
+    top: 0;
     left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    }
+    
+    .secundaries{
+    position: absolute;
+    left: 62%;
+    height: 76%;
+    width: 37%;
+    display: flex;
+    flex-direction: column;
+    object-fit: cover;
+    }
+    
+    .imgsec{
+    margin-top: 3%;
+    margin-right: 1%;
     border-radius: 5px;
-    background: #010b14;
-    border: 1px solid #031828;
-    box-shadow: 0 0 10px rgba(3, 24, 40, 0.9);
-}
+    width: 99%;
+    height: 47.5%;
+    object-fit: cover;
+    }
+    
+    .infopubli{
+        width: 97%;
+        height: auto;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        padding-left: 10px;
+        border-radius: 5px;
+        background: #010b14;
+        border: 1px solid #031828;
+        box-shadow: 0 0 10px rgba(3, 24, 40, 0.9);
+        text-align: left;
+    }
+    
+    .titulop{
+    margin: 0;
+    height: 15px;
+    }
+    
+    .descripcionp{
+        display: flex;
+    justify-content: flex-start;
+    margin: 0;
+    margin-top: 5px;
+    height: auto;
+    }
 
 footer{
     background: #000C12;
@@ -191,3 +204,40 @@ footer{
     color:white;
     transform: translateY(-1px);
 }
+
+
+
+
+/*Para pantallas M*/
+@media only screen and (max-width: 700px) {
+    .publicacion{
+        width: 85%;
+    }
+
+}
+
+/*Para pantallas S*/
+@media only screen and (max-width: 600px) {
+    .patas li{
+        margin: 0px;
+        margin-left: 5px;
+        margin-right: 40px;
+    }
+    
+    .patas button{
+        font-size: 15px;
+    }
+}
+
+/*Para pantallas XS*/
+@media only screen and (max-width: 500px) {
+    .patas li{
+        margin: 0px;
+        margin-left: -10px;
+        margin-right: 20px;
+    }
+    
+    .patas button{
+        font-size: 12px;
+    } 
+}  
