--- a/PublicaciónCategoríaUser/PublicaciónCatUser.css
+++ b/PublicaciónCategoríaUser/PublicaciónCatUser.css
@@ -5,313 +5,340 @@
 
 body{
     background-image: url(/FOTOSINTEGRADOR/FONDO.png); 
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-size: contain;
+    background-repeat: repeat;
     margin: 0;
     padding: 0;
     align-items: center;
     justify-content: center;
-}
-
-header {
-    margin-top: 5px;
     width: 100%;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 2;
 }
+    
+    header {
+        width: 100%;
+        height: 20%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: transparent;
+        z-index: 2;
+    }
+    
+    .BtnLogo{
+        margin-top: 1%;
+        font-family: 'Poppins', sans-serif;
+        font-size: 15px;
+        font-weight: 900;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        outline: none;
+        text-decoration: none;
+        color: #A7A7A7;
+        transition: color 0.0s ease;
+    } 
 
-.BtnLogo{
-    margin-top: 13px;
-    font-family: 'Poppins', sans-serif;
-    font-size: 15px;
-    font-weight: 900;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    outline: none;
-    text-decoration: none;
-    color: #A7A7A7;
-    transition: color 0.0s ease;
-}
+    .UDESEV{
+        width: 16%;
+    }
 
-#logo {
-    left: 2%;
-    width: 180px;
-    float: left;
-}
+    #logo {
+        display: flex;
+        float: left;
+        left: 2%;
+    }
+    
+    .menú {
+        top: -2%;
+        flex-grow: 1;
+        justify-content: center;
+    }
+    
+    .menú ul {
+        z-index: 1000;
+        list-style: none;
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+    }
+    
+    .menú li {
+        justify-content: center;
+        position: relative;
+    }
+    
+    .menú button {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 900;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        outline: none;
+        text-decoration: none;
+        color: #A7A7A7;
+        transition: color 0.0s ease;
+    }
+    
+    .menú button:hover {
+        transform: translateY(-2px);
+        color: white;
+    }
+    
+    #submenu {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        transform: translateX(-50%);
+        margin-left: -1.09%;
+    }
+    
+    .submenu ul {
+        z-index: 1000;
+        list-style: none;
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+    }
+    
+    .submenu li {
+        justify-content: flex-start;
+        margin: 0;
+    }
+    
+    .submenu button {
+        font-family: 'Poppins', sans-serif;
+        font-size: 18px;
+        font-weight: 900;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        outline: none;
+        text-decoration: none;
+        color: #A7A7A7;
+        transition: color 0.0s ease;
+        margin-right: 0.31%;
+    }
+    
+    .submenu button:hover {
+        transform: translateY(-2px);
+        color: white;
+    }
+    
+    .categorias-lista {
+        display: none;
+    }
+    
+    .categorias-lista ul {
+        z-index: 1000;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: grid;
+      grid-template-rows: repeat(2, auto);
+      grid-template-columns: repeat(2, 1fr); 
+    }
+    
+    .categorias-lista li {
+        margin: 0.31% 0.62%;
+    }
+    
+    .categorias-lista button {
+        font-family: 'Poppins', sans-serif;
+        font-size: 15px;
+        font-weight: 900;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        outline: none;
+        text-decoration: none;
+        color: #A7A7A7;
+        transition: color 0.0s ease;
+    }
+    
+    .categorias-lista button:hover {
+        text-decoration: underline;
+        transform: translateY(-2px);
+        color: white;
+    }
+    
+    .FotoPerfil {
+        margin-top: -0.58%;
+        width: 16%;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+    }
+    
+    .FotoPerfil ul {
+        list-style: none;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    .Foto {
+        background: #0A1319;
+        border-radius: 50px;
+        margin: 0;
+        border: 2px solid #0A1319;
+        object-fit: cover;
+    }
+    
+    .FotoPerfil li {
+        list-style: none;
+        justify-content: center;
+        margin-top: 0.39%;
+        margin-right: 0.21%;
+    }
+    
+    .FotoPerfil button {
+        font-family: 'Poppins', sans-serif;
+        font-size: 15px;
+        font-weight: 900;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        outline: none;
+        text-decoration: none;
+        transition: color 0.0s ease;
+    }
+    
+    .FotoPerfil button:hover {
+        transform: translateY(-2px);
+    }
+    
+    .FotoPerfil .perfil-options li {
+        display: flex;
+        list-style: none;
+        justify-content: center;
+        width: 100%;
+        margin-left: -35%;
+    }
+    
+    .FotoPerfil .perfil-options button {
+        display: flex;
+        font-family: 'Poppins', sans-serif;
+        font-size: 15px;
+        font-weight: 900;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        outline: none;
+        text-decoration: none;
+        color: #A7A7A7;
+        transition: color 0.0s ease;
+    }
+    
+    .FotoPerfil .perfil-options button:hover {
+        transform: translateY(-2px);
+        color: white;
+    }
 
-.menú {
-    top: -8px;
-    flex-grow: 1;
-    justify-content: center;
-}
+    #searchBox {
+        margin-top: 20px;
+        display: block;
+        position: relative;
+        z-index: 20;
+    }
 
-.menú ul {
-    z-index: 1000;
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-}
-
-.menú li {
-    justify-content: center;
-    margin: 0px 60px;
-    position: relative;
-}
-
-.menú button {
-    font-family: 'Poppins', sans-serif;
-    font-size: 20px;
-    font-weight: 900;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    outline: none;
-    text-decoration: none;
-    color: #A7A7A7;
-    transition: color 0.0s ease;
-}
-
-.menú button:hover {
-    color: white;
-    transform: translateY(-2px);
-}
-
-#submenu {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-left: -22px;
-}
-
-.submenu ul {
-    z-index: 1000;
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-}
-
-.submenu li {
-    justify-content: flex-start;
-    margin: 0;
-}
-
-.submenu button {
-    font-family: 'Poppins', sans-serif;
-    font-size: 18px;
-    font-weight: 900;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    outline: none;
-    text-decoration: none;
-    color: #A7A7A7;
-    transition: color 0.0s ease;
-    margin-right: 5px;
-}
-
-.submenu button:hover {
-    color: white;
-    transform: translateY(-2px);
-}
-
-.categorias-lista {
-    display: none;
-}
-
-.categorias-lista ul {
-    z-index: 1000;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: grid;
-  grid-template-rows: repeat(2, auto);
-  grid-template-columns: repeat(2, 1fr); 
-}
-
-.categorias-lista li {
-    margin: 5px 10px;
-}
-
-.categorias-lista button {
-    font-family: 'Poppins', sans-serif;
-    font-size: 15px;
-    font-weight: 900;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    outline: none;
-    text-decoration: none;
-    color: #A7A7A7;
-    transition: color 0.0s ease;
-}
-
-.categorias-lista button:hover {
-    text-decoration: underline;
-    color: white;
-    transform: translateY(-2px);
-}
-
-.FotoPerfil {
-    width: 200px;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-}
-
-.FotoPerfil ul {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.Foto {
-    background: #0A1319;
-    width: 45px;
-    height: 45px;
-    border-radius: 50px;
-    margin: 0;
-    border: 2px solid #0A1319;
-    object-fit: cover;
-}
-
-.FotoPerfil li {
-    list-style: none;
-    justify-content: center;
-    margin-top: 10px;
-    margin-right: 5px;
-}
-
-.FotoPerfil button {
-    font-family: 'Poppins', sans-serif;
-    font-size: 15px;
-    font-weight: 900;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    outline: none;
-    text-decoration: none;
-    color: #A7A7A7;
-    transition: color 0.0s ease;
-}
-
-.FotoPerfil button:hover {
-    color: white;
-    transform: translateY(-2px);
-}
-
-#searchBox {
-    top: 20px;
-    display: block;
-    position: relative;
-}
-
-.searchBox {
-    display: flex;
-    width: 400px;
-    height: 35px;
-    align-items: center;
-    justify-content: left;
-    gap: 8px;
-    background-color: rgba(18, 30, 37, 0.6);
-    border-radius: 50px;
-    position: relative;
-    margin: 0 auto 0 auto;
-    border: 1px solid #A7A7A7;
-}
-
-.searchInput {
-    border: none;
-    background: none;
-    outline: none;
-    color: white;
-    font-size: 13px;
-    width: 320px;
-    padding: 8px 16px;
-}
-
-.searchButton {
-    z-index: 30;
-    color: white;
-    position: absolute;
-    right: 8px;
-    width: 35px;
-    height: 35px;
-    top: 0;
-    border-radius: 50%;
-    background: transparent;
-    border: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
-    cursor: pointer;
-}
-
-.searchButton:hover {
-    transform: translateY(-1px);
-}
-
-.searchButton svg {
-    width: 25px;
-    height: 25px;
-}
+    
+    .searchBox {
+        display: flex;
+        width: 400px;
+        height: 3.5%;
+        align-items: center;
+        justify-content: left;
+        gap: 8px;
+        background-color: rgba(18, 30, 37, 0.6);
+        border-radius: 50px;
+        position: relative;
+        margin: 0 auto 0 auto;
+        border: 1px solid #A7A7A7;
+    }
+    
+    .searchInput {
+        border: none;
+        background: none;
+        outline: none;
+        color: white;
+        font-size: 13px;
+        width: 320px;
+        padding: 8px 16px;
+    }
+    
+    .searchButton {
+        z-index: 30;
+        color: white;
+        position: absolute;
+        right: 8px;
+        width: 35px;
+        height: 35px;
+        top: 0;
+        border-radius: 50%;
+        background: transparent;
+        border: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+        cursor: pointer;
+    }
+    
+    .searchButton:hover {
+        transform: translateY(-1px);
+    }
+    
+    .searchButton svg {
+        width: 25px;
+        height: 25px;
+    }
 
 main{
+    display: flex;
     position: relative;
-}
-
-#temp{
-    display: none;
-    height: 37px;
+    margin-top: 1%;
+    flex-direction: column;
+    z-index: 100;
 }
 
 h2{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 50px;
-    margin-bottom: 20px;
+    margin-top: 2%;
+    margin-bottom: 2%;
     color: #F4F4F4;
 }
 
 .publicaciones{
     display: flex;
     flex-wrap: wrap;
+    z-index: 50;
     justify-content: space-around; 
     gap: 20px;
 }
 
 .publicacion{
-margin-right: 10px;
 margin-top: 10px;
-margin-left: 10px;
+margin-left: 1%;
+margin-right: 1%;
 margin-bottom: 30px;
-width: 550px;
-height: 267px;
+width: 46.5%;
+height: 265px;
 position: relative;
 border-radius: 5px;
 }
 
 .imgprin{
-margin-top: 5px;
-margin-left: 5px;
-margin-right: 5px;
+margin-top: 1%;
+margin-left: 1%;
+margin-right: 1%;
 border-radius: 5px;
-width: 100%;
-height: 100%;
-width: 340px;
-height: 200px;
+width: 60%;
+height: 75%;
 object-fit: cover;
 position: absolute;
 top: 0;
@@ -323,37 +350,51 @@ justify-content: center;
 
 .secundaries{
 position: absolute;
-top: 0;
-left: 350px;
+left: 62%;
+height: 76%;
+width: 37%;
 display: flex;
 flex-direction: column;
-}
-
-.imgsec{
-margin-top: 5px;
-margin-right: 5px;
-border-radius: 5px;
-width: 100%;
-height: 100%;
-width: 195px;
-height: 97.5px;
 object-fit: cover;
 }
 
-.descripcion{
-margin: 5px;
-width: 540px;
-height: 50px;
-position: absolute;
-bottom: 0;
-left: 0;
-display: flex;
-align-items: center;
-justify-content: center;
+.imgsec{
+margin-top: 3%;
+margin-right: 1%;
 border-radius: 5px;
-background: #010b14;
-border: 1px solid #031828;
-box-shadow: 0 0 10px rgba(3, 24, 40, 0.9);
+width: 99%;
+height: 47.5%;
+object-fit: cover;
+}
+
+.infopubli{
+    width: 97%;
+    height: auto;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    padding-left: 10px;
+    border-radius: 5px;
+    background: #010b14;
+    border: 1px solid #031828;
+    box-shadow: 0 0 10px rgba(3, 24, 40, 0.9);
+    text-align: left;
+}
+
+.titulop{
+margin: 0;
+height: 15px;
+}
+
+.descripcionp{
+    display: flex;
+justify-content: flex-start;
+margin: 0;
+margin-top: 5px;
+height: auto;
 }
 
 footer{
@@ -400,3 +441,184 @@ footer{
     color:white;
     transform: translateY(-1px);
 }
+
+
+
+
+
+/*Para pantallas XL*/
+@media only screen and (min-width: 900px) {
+    #logo{
+        width: 100%;
+    }
+
+    .menú button {
+        font-size: 20px;
+    }
+
+    .menú li {
+        margin: 0 8%;
+    }
+
+    .Foto {
+        width: 30%;
+        height: 30%;
+    }  
+}
+
+/*Para pantallas L*/
+@media only screen and (max-width: 899px) {
+    #logo{
+        width: 100%;
+    }
+
+    .menú button {
+        font-size: 20px;
+    }
+
+    .menú li {
+        margin: 0 6%;
+    }
+
+    .Foto {
+        width: 50%;
+        height: 50%;
+    }
+
+    .FotoPerfil .perfil-options button {
+        margin-left: -18%;
+        font-size: 12px;
+    } 
+}
+
+/*Para pantallas M*/
+@media only screen and (max-width: 700px) {
+    #logo{
+        width: 120%;
+    }
+
+    .menú button {
+        font-size: 18px;
+    }
+
+    .menú li {
+        margin: 0 5%;
+    }
+
+    .Foto {
+        width: 60%;
+        height: 60%;
+    }
+
+    .FotoPerfil .perfil-options button {
+        margin-left: -30%;
+        font-size: 12px;
+    }
+
+    .publicacion{
+        width: 85%;
+        }
+}
+
+/*Para pantallas S*/
+@media only screen and (max-width: 600px) {
+    #logo{
+        width: 120%;
+    }
+
+    .menú button {
+        font-size: 16px;
+    }
+
+    .menú li {
+        margin: 0 4%;
+    }
+
+    .Foto {
+        width: 70%;
+        height: 70%;
+    }
+
+    .patas li{
+        margin: 0px;
+        margin-left: 5px;
+        margin-right: 40px;
+    }
+    
+    .patas button{
+        font-size: 15px;
+    }
+}
+
+/*Para pantallas XS*/
+@media only screen and (max-width: 500px) {
+    header{
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .UDESEV{
+       width: 30%;
+       margin-left: -3%;
+       order: 1;
+    }
+
+    .menú{
+        margin-top: -5%;
+        margin-left: -13%;
+        order: 3;
+    }
+
+    .categorias-lista ul{
+        display: grid;
+        grid-template-rows: repeat(2, auto);
+        grid-template-columns: repeat(2, 1fr); 
+    }
+
+    .Foto{
+        margin-left: -35px;
+        width: 60px;
+        height: 60px;
+    }
+
+    .FotoPerfil{
+        width: 25%;
+        margin-top: -5%;
+        margin-bottom: 2%;
+        order: 2;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .FotoPerfil .perfil-options ul {
+        flex-direction: row;
+    }
+
+    .FotoPerfil .perfil-options button {
+        margin-left: 0;
+        margin-right: -15%;
+        font-size: 12px;
+    }
+
+    #searchBox{
+        margin-top: -1%;
+    }
+
+    .searchBox {
+        width: 270px;
+    }
+    
+    .searchInput {
+        width: 190px;
+    }
+
+    .patas li{
+        margin: 0px;
+        margin-left: -10px;
+        margin-right: 20px;
+    }
+    
+    .patas button{
+        font-size: 12px;
+    }
+}   
